<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="handler"
            type="com.example.leeyh.abroadapp.viewmodel.SignViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/sign_in_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="48dp"
            android:fontFamily="@font/hel_bold"
            android:text="@string/sign_in_title"
            android:textColor="@color/cardview_dark_background"
            android:textSize="36sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/aller_bd"
            android:text="@string/sign_in_email"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_title" />

        <EditText
            android:id="@+id/sign_in_email_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:backgroundTint="@android:color/darker_gray"
            android:ems="10"
            android:fontFamily="@font/aller_rg"
            android:gravity="start"
            android:inputType="textPersonName"
            android:outlineAmbientShadowColor="?attr/colorButtonNormal"
            android:outlineSpotShadowColor="@android:color/darker_gray"
            android:shadowColor="@android:color/darker_gray"
            android:textAlignment="textStart"
            android:textColorHighlight="@android:color/darker_gray"
            android:textColorHint="@android:color/darker_gray"
            android:textColorLink="?attr/colorButtonNormal"
            android:textCursorDrawable="@android:color/darker_gray"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailTextView" />

        <TextView
            android:id="@+id/passwordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/aller_bd"
            android:text="@string/sign_in_password"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_email_edit_text" />

        <EditText
            android:id="@+id/sign_in_password_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:backgroundTint="@android:color/darker_gray"
            android:ems="10"
            android:fontFamily="@font/aller_rg"
            android:gravity="start"
            android:inputType="textPassword"
            android:outlineAmbientShadowColor="?attr/colorButtonNormal"
            android:textAlignment="textStart"
            android:textColorLink="?attr/colorButtonNormal"
            android:textCursorDrawable="@android:color/darker_gray"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.123"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextView" />

        <CheckBox
            android:id="@+id/showPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:fontFamily="@font/aller_rg"
            android:text="@string/sign_in_show_password"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_password_edit_text" />

        <TextView
            android:id="@+id/sign_up_text_View"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:clickable="true"
            android:text="@string/sign_in_request_sign_up"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/showPassword" />

        <Button
            android:id="@+id/sign_in_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:background="@color/cBlue"
            android:clickable="true"
            android:fontFamily="@font/aller_bd"
            android:text="@string/sign_in_request_sign_in"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_text_View" />

    </android.support.constraint.ConstraintLayout>
</layout>